--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-sql": "^2.3.2",
     "monaco-editor": "^0.55.1",
     "monaco-vim": "^0.4.4",
+    "pyodide": "^0.29.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router": "^7.13.0",
