Rebrand to Code Kata, expand kata library, and improve UI
Rename from Kata Desktop to Code Kata across configs, window title,
release workflow, and Tauri identifiers. Add new app icons and logos
for all platforms (macOS, iOS, Android). Add iterative/recursive
variant katas for tree traversals, graph DFS, binary search, linked
list traversal, climbing stairs, and matrix grid BFS. Improve editor
layout, dashboard analytics, library filtering, settings page, and
top bar. Add print output display in test results. Extend database
schema and settings store.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: context.ref.replace('refs/tags/', ''),
-              name: `Kata Desktop ${context.ref.replace('refs/tags/', '')}`,
+              name: `Code Kata ${context.ref.replace('refs/tags/', '')}`,
               body: 'See the assets below to download for your platform.',
               draft: true,
               prerelease: false
