Add license system with hardware fingerprinting
Settings store now tracks license key, hardware fingerprint, and premium
status. Rust command generates SHA256 hardware fingerprint from system
info. License tab in settings allows activation with backend validation
(offline grace period). Premium features gated behind isPremium flag.
Backend API endpoints needed for production activation/validation.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,5 @@ tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tauri-plugin-fs = "2"
+sysinfo = "0.32"
+sha2 = "0.10"
