--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "clear && tsc && vite build && echo \"ran at $(date +%H:%M:%S)\"",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
